tests/should-fail/crashes/createregion-in-globals.j
globals
    region r = CreateRegion()
endglobals
